fix: truncate long host titles

--- a/src/renderer/components/List/ListItem.module.scss
+++ b/src/renderer/components/List/ListItem.module.scss
@@ -1,5 +1,7 @@
 .root {
   display: flex;
+  width: 100%;
+  min-width: 0;
 
   &.selected:not(.isTray):hover {
     .edit {
@@ -29,6 +31,7 @@
   display: flex;
   align-items: center;
   flex: 1 1 auto;
+  min-width: 0;
   position: relative;
   //padding-left: 10px;
   height: var(--swh-tree-row-height);
@@ -56,6 +59,7 @@
 }
 
 .icon {
+  flex: 0 0 auto;
   margin-right: 0.5em;
   display: flex;
   align-items: center;
@@ -69,6 +73,14 @@
     position: relative;
     top: -1px;
   }
+}
+
+.label {
+  flex: 1 1 auto;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .status {
